2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/footnotes.c (info_get_or_remove_footnotes): Call
	info_set_node_of_window instead of window_set_node_of_window.
	* info/session.c (remember_window_and_node): Declared static.

2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Call posix_openpt instead of getpt.

	* info/t/Init-intera.inc: Don't redirect stderr.  Set
	LIBC_FATAL_STDERR_.

	* info/t/body-start.sh, info/t/end-of-line.sh, info/t/goto-quoted.sh,
	info/t/index-long-nodeline.sh, info/t/index.sh, info/t/next-quoted.sh,
	info/t/quoted-label-and-target.sh, info/t/quoted-label-as-target.sh,
	info/t/quoted-target.sh, info/t/split-index.sh, info/t/tab.sh: Don't
	exit immediately if no output file was created and always proceed to
	cleanup.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forget_node, forget_windows_and_nodes): Free
	NODE objects in window history list.
	(info_split_window): Copy the NODE object when creating a new
	window.

	* info/echo-area.c (restore_calling_window): Call forget_node to
	properly erase completions window from window history and restore
	previous node.
	(ea_possible_completions): Call info_set_node_of_window instead
	of window_set_node_of_window to save point and pagetop.
	(calling_window_point, calling_window_pagetop): Delete unused.

	* info/nodemenu.c (list_visited_nodes): Call
	info_set_node_of_window instead of set_remembered_pagetop_and_point,
	window_set_node_of_window and remember_window_and_node individually.
	(get_visited_nodes) Remove unnecessary check.

	* info/indices.c (do_info_index_search, info_index_apropos)
	* info/infodoc.c (info_find_or_create_help_window):
	Call info_set_node_of_window instead of window_set_node_of_window.
	* info/session.c (set_remembered_pagetop_and_point): Declared
	static.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_print_node, print_node): print_node merged
	into info_print_node.
